# atv-player

./: .gitignore  README.md  build.py  pyproject.toml  start.sh
.github/workflows/: build.yml
packaging/icons/: app.icns
packaging/linux/: AppRun  atv-player.desktop
scripts/: build_fcitx5_qt6.sh
src/atv_player/: __init__.py  api.py  app.py  custom_live_service.py  live_epg_repository.py  live_epg_service.py  live_playlist_parser.py  live_source_repository.py  local_playback_history.py  logging_utils.py  m3u_parser.py  main.py  models.py  paths.py  (+6 more)
tests/: conftest.py  secspider_fixtures.py  test_api_client.py  test_app.py  test_browse_controller.py  test_browse_page_ui.py  test_build.py  test_custom_live_service.py  test_danmaku_bilibili_provider.py  test_danmaku_cache.py  test_danmaku_iqiyi_provider.py  test_danmaku_mgtv_provider.py  test_danmaku_preferences.py  test_danmaku_service.py  test_danmaku_subtitle.py  test_danmaku_tencent_provider.py  test_danmaku_utils.py  test_danmaku_youku_provider.py  test_douban_controller.py  test_douban_page_ui.py  test_emby_controller.py  test_feiniu_controller.py  test_history_controller.py  test_hls_proxy_m3u8.py  test_hls_proxy_segment.py  test_hls_proxy_server.py  test_hls_proxy_stripper.py  test_icon_cache.py  test_jellyfin_controller.py  test_live_controller.py  test_live_epg_repository.py  test_live_epg_service.py  test_live_playlist_parser.py  test_live_source_manager_dialog.py  test_live_source_repository.py  test_login_controller.py  test_login_window_ui.py  test_m3u8_ad_filter.py  test_m3u_parser.py  test_main.py  (+19 more)
(+248 files in other folders)
