[project]
name = "atv-player"
version = "0.1.0"
description = "PySide6 desktop player for alist-tvbox"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.11.0",
  "httpx>=0.28",
  "mpv>=1.0.6",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-qt>=4.4",
]
package = [
  "pyinstaller>=6.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atv_player"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
