[project]
name = "atv-player"
version = "0.1.0"
description = "PySide6 desktop player for alist-tvbox"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.11.0",
  "beautifulsoup4>=4.14.3",
  "httpx>=0.28",
  "lxml>=6.0.4",
  "mpv>=1.0.6",
  "pyquery>=2.0.1",
  "requests>=2.33.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-qt>=4.4",
  "ruff>=0.11",
]
package = [
  "pyinstaller>=6.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atv_player"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
